securities-manager-app/force-app/main/default/objects/Account/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <description>CNPJ formatado</description>
    <inlineHelpText>CNPJ válido</inlineHelpText>
    <label>CNPJ</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>