securities-manager-app/force-app/main/default/objects/Account/fields/CvmCode__c.field-meta.xml
<CustomField>
    <fullName>CvmCode__c</fullName>
    <description>Código de registro na Comissão de Valores Mobiliários.</description>
    <inlineHelpText>Código de registro na Comissão de Valores Mobiliários.</inlineHelpText>
    <label>Codigo CVM</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>