securities-manager-app/force-app/main/default/objects/Account/fields/RegisteredName__c.field-meta.xml
<CustomField>
    <fullName>RegisteredName__c</fullName>
    <label>Razão Social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>