securities-manager-app/force-app/main/default/objects/Account/recordTypes/Account.recordType-meta.xml
<RecordType>
    <fullName>Account</fullName>
    <active>true</active>
    <label>Conta</label>
</RecordType>