securities-manager-app/force-app/main/default/objects/Account/recordTypes/Brokers.recordType-meta.xml
<RecordType>
    <fullName>Brokers</fullName>
    <active>true</active>
    <label>Corretora</label>
</RecordType>